--- a/TD_Schrodinger.ipynb
+++ b/TD_Schrodinger.ipynb
@@ -1987,7 +1987,7 @@
         }
       ],
       "source": [
-        "model_pinn_he, loss_pinn = train_pinn(model_pinn_he, n_epochs, train_x, train_y, x_physics, t_physics, f_colloc, b_colloc, ic_colloc, ic)"
+        "model_pinn_he, loss_pinn = train_pinn(model_pinn_he, n_epochs, train_x, train_y, x_physics, t_physics, f_colloc, b_colloc, ic_colloc, ic, 1, 1e-4)"
       ]
     },
     {
@@ -2128,6 +2128,28 @@
         "\n",
         "<!-- Solutions: -->"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "6ef08139",
+      "metadata": {},
+      "source": [
+        "### Further Reading\n",
+        "\n",
+        "For a gentle introduction to Neural Networks, and  more material combining data science and physics applications, check out the following repository:\n",
+        "https://github.com/GDS-Education-Community-of-Practice/DSECOP/tree/main/Learning_the_Schrodinger_Equation\n",
+        "\n",
+        "This work was supported by the APS Data Science Education Community of Practice (DSECOP) fellowship program. \n",
+        "More information: https://dsecop.org"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d7534a36",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
