--- a/TD_Schrodinger.ipynb
+++ b/TD_Schrodinger.ipynb
@@ -3,10 +3,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
-      "source": []
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/karanprime/TDSE_PINN_Kiel/blob/main/TD_Schrodinger.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -20,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "c91pyjeO33NS",
       "metadata": {
         "colab": {
@@ -60,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "c9f41927",
       "metadata": {
         "id": "c9f41927"
@@ -99,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "dCZqMD71AHob",
       "metadata": {
         "colab": {
@@ -224,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "ef1f75c2",
       "metadata": {
         "id": "ef1f75c2"
@@ -267,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "83154aba",
       "metadata": {
         "id": "83154aba"
@@ -300,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "4bb7d99e",
       "metadata": {
         "id": "4bb7d99e"
@@ -332,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "39ebd6d9",
       "metadata": {
         "colab": {
@@ -396,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "bcd5d954",
       "metadata": {
         "id": "bcd5d954"
@@ -485,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "bcfd05ff",
       "metadata": {
         "id": "bcfd05ff"
@@ -510,7 +512,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "ea384dcb",
-      "metadata": {},
+      "metadata": {
+        "id": "ea384dcb"
+      },
       "outputs": [],
       "source": []
     },
@@ -526,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "dd12960c",
       "metadata": {
         "id": "dd12960c"
@@ -571,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "99436214",
       "metadata": {
         "id": "99436214"
@@ -612,7 +616,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "3343794e",
       "metadata": {
         "id": "3343794e"
@@ -649,7 +653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "d7ee4863",
       "metadata": {
         "id": "d7ee4863"
@@ -689,7 +693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "f0809232",
       "metadata": {
         "id": "f0809232"
@@ -705,7 +709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "bf3e7507",
       "metadata": {
         "colab": {
@@ -1497,7 +1501,9 @@
     {
       "cell_type": "markdown",
       "id": "bec1895c",
-      "metadata": {},
+      "metadata": {
+        "id": "bec1895c"
+      },
       "source": [
         "### Only PINN Loss\n",
         "The main advantage of PINN is that we don't need training data at all! The neural network itself acts as a solution, constrained by the PDE terms in the loss function."
@@ -1507,7 +1513,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "eed4c4d2",
-      "metadata": {},
+      "metadata": {
+        "id": "eed4c4d2"
+      },
       "outputs": [],
       "source": [
         "\n",
@@ -1524,7 +1532,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "207bfef3",
-      "metadata": {},
+      "metadata": {
+        "id": "207bfef3"
+      },
       "outputs": [],
       "source": [
         "y_pred = get_model_error(model_pinn_pde_only, test_x, test_y)"
@@ -1534,7 +1544,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "ba8cd1ee",
-      "metadata": {},
+      "metadata": {
+        "id": "ba8cd1ee"
+      },
       "outputs": [],
       "source": [
         "L = float(np.pi)\n",
@@ -1987,7 +1999,7 @@
         }
       ],
       "source": [
-        "model_pinn_he, loss_pinn = train_pinn(model_pinn_he, n_epochs, train_x, train_y, x_physics, t_physics, f_colloc, b_colloc, ic_colloc, ic, 1, 1e-4)"
+        "model_pinn_he, loss_pinn = train_pinn(model_pinn_he, n_epochs, train_x, train_y, x_physics, t_physics, f_colloc, b_colloc, ic_colloc, ic)"
       ]
     },
     {
@@ -2128,36 +2140,14 @@
         "\n",
         "<!-- Solutions: -->"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "6ef08139",
-      "metadata": {},
-      "source": [
-        "### Further Reading\n",
-        "\n",
-        "For a gentle introduction to Neural Networks, and  more material combining data science and physics applications, check out the following repository:\n",
-        "https://github.com/GDS-Education-Community-of-Practice/DSECOP/tree/main/Learning_the_Schrodinger_Equation\n",
-        "\n",
-        "This work was supported by the APS Data Science Education Community of Practice (DSECOP) fellowship program. \n",
-        "More information: https://dsecop.org"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "d7534a36",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "include_colab_link": true,
       "name": "02_TD_Schrodinger.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "gpuClass": "standard",
     "kernelspec": {
